[package]
authors = ["Brayden Banks <bb010g@gmail.com>"]
description = "Type-safe BAI serialization library for Rust"
license = "MIT/Apache-2.0"
name = "baimax"
readme = "README.md"
repository = "https://github.com/bb010g/baimax.git"
version = "0.1.0"

[dependencies]
chrono = "0.3.0"
nom = "3.0.0"
void = "1.0.2"

[dependencies.clippy]
optional = true
version = "*"

[dependencies.flame]
optional = true
version = "0.1.11"

[dependencies.flamer]
optional = true
version = "0.1.4"

[dependencies.penny]
path = "../penny"

[features]
default = []
flame_it = ["flame", "flamer"]
lint = ["clippy"]

[profile.bench]
debug = true
