[package]
authors = ["Brayden Banks <bb010g@gmail.com>"]
description = "Type-safe BAI serialization library for Rust"
license = "MIT/Apache-2.0"
name = "baimax"
readme = "README.md"
repository = "https://github.com/bb010g/baimax.git"
version = "0.1.0"

[dependencies]
chrono = "0.3.0"
nom = "3.0.0"
void = "1.0.2"

[dependencies.clippy]
optional = true
version = "*"

[dependencies.penny]
path = "../penny"

[dependencies.serde]
optional = true
version = "1.0.8"

[dependencies.serde_derive]
optional = true
version = "1.0.8"

[features]
default = ["serde-serialize"]
lint = ["clippy"]
serde-serialize = ["chrono/serde", "penny/serde-serialize", "serde", "serde_derive"]
